--- a/references.bib
+++ b/references.bib
@@ -9,7 +9,6 @@ year = {2013},
 doi = {10.1080/09332480.2013.772392},
 
 URL = {http://www.tandfonline.com/doi/abs/10.1080/09332480.2013.772392},
-eprint = {http://www.tandfonline.com/doi/pdf/10.1080/09332480.2013.772392}
 }
 
 @article{hadley:2014,
@@ -18,8 +17,7 @@ title = {Tidy Data},
 journal = {Under review by the Journal of Statistical Software},
 year = {2014},
 
-URL = {http://vita.had.co.nz/papers/tidy-data.pdf},
-eprint = {http://vita.had.co.nz/papers/tidy-data.pdf}
+URL = {http://vita.had.co.nz/papers/tidy-data.pdf}
 }
 
 @Manual{R13,
@@ -42,7 +40,7 @@ eprint = {http://vita.had.co.nz/papers/tidy-data.pdf}
 
 @Manual{maps,
     title = {maps: Draw Geographical Maps},
-    author = {Original S code by Richard A. Becker and Allan R. Wilks. R version by Ray Brownrigg. Enhancements by Thomas P Minka <tpminka@media.mit.edu>},
+    author = {Original S code by Richard A. Becker and Allan R. Wilks. R version by Ray Brownrigg. Enhancements by Thomas P Minka $<$tpminka@media.mit.edu$>$},
     year = {2013},
     note = {R package version 2.3-6},
     url = {http://CRAN.R-project.org/package=maps},
