--- a/CB_writeup.Rnw
+++ b/CB_writeup.Rnw
@@ -18,6 +18,13 @@
 \begin{abstract}
 The American Community Survey is an ongoing survey by the US Census Bureau that provides yearly demographic data.  The Census Bureau has various tools for giving the public access to their data.  Recently the Census Bureau released an online API to give the public access to the Decennial census and the American Community Census.  We will discuss how to find available datasets and available demographic variables as well as some of the shortcomings of the online API.  The main shortcomings are related to how the data is organized and the limited number of variables accessible from the online API.  We will also provide examples on what is possible using the online API.
 
+\hh{for all the tables: numbers should be aligned right.}
+
+\hh{don't use the math environment for italics - use the command} \begin{verbatim}
+\emph
+\end{verbatim} for italics, and \begin{verbatim}
+\tt
+\end{verbatim} for any code related things.
 \end{abstract}
 
 \section{Introduction}
@@ -70,7 +77,7 @@ http://api.census.gov/data/[YEAR]/[DATASET]?key=[KEY]&get=[VARIABLES]&for=state:
 http://api.census.gov/data/[YEAR]/[DATASET]?key=[KEY]&get=[VARIABLES]&for=state:06
 http://api.census.gov/data/[YEAR]/[DATASET]?key=[KEY]&get=[VARIABLES]&for=state:01,06
 \end{verbatim}
-The above HTTP GET requests specify all states, a specific state (California, see figure \ref{fig:state}), and a set of selected states (Alabama and California), respectively.  Some geographic regions are nested within larger regions and a valid GET request may require us to specify the containing region. The  $\&in=[GEOGRAPHY]$ tag is used to further specify an appropriate containing region for the region of interest.  For example, counties are contained within states and the following statement is a GET request for a county or counties within a specific state:
+The above HTTP GET requests specify all states, a specific state (California, see figure \ref{fig:state}), and a set of selected states (Alabama and California), respectively.  Some geographic regions are nested within larger regions and a valid GET request may require us to specify the containing region. The  {\tt \&in=[GEOGRAPHY]} tag is used to further specify an appropriate containing region for the region of interest.  For example, counties are contained within states and the following statement is a GET request for a county or counties within a specific state:
 \begin{verbatim}
 http://api.census.gov/data/ [...] &for=county:037&in=state:06
 http://api.census.gov/data/ [...] &for=county:*&in=state:06
@@ -281,16 +288,17 @@ After selecting a dataset listed in the master index, the user will lookup what 
 \\
 Within each concept there are multiple labels that provide information on different levels of each of the factors.  For example, the concept ``Health Insurance Coverage Status by Sex by Age" contains a label for males over 70 with health insurance.  This concept also contains labels for each combination of gender (male, female), age group (under 6, 6 to 17, 18 to 24, 25 to 34, 35 to 44, 45 to 54, 55 to 64, 65 to 74 and 75 and over) and health insurance coverage (with and without health insurance).  Some of the labels may also contain summary information in the form of totals.  For this concept there are labels for total number of males, total number of females and totals for males/females in each age group.\\
 \\
-To lookup what variables are available, the {\tt variables.json} and {\tt variables.xml} files contain a list of all concepts and labels along with a description.  The JSON formatted $variables.json$ is formatted as follows:
+To lookup what variables are available, the {\tt variables.json} and {\tt variables.xml} files contain a list of all concepts and labels along with a description.  The JSON formatted {\tt variables.json} is formatted as follows:
 \begin{verbatim}
 "B27001_056E": {
   "label": "Female:!!75 years and over:!!With health insurance coverage",
   "concept": "B27001.  Health Insurance Coverage Status by Sex by Age"
 },
 \end{verbatim}
-This describes label 056E of concept B27001.  This is a table of 75 and older females with health insurance.  The associated XML formatted version can be found the appendix in section \ref{sec:varappend}.\\
+This describes label 056E of concept B27001.  This is a table of 75 and older females with health insurance. \hh{Label 057E describes the corresponding number of  females aged 75 and older without health insurance. Both of these numbers are given in table \ref{tab:df}.}
+The associated XML formatted version can be found the appendix in section \ref{sec:varappend}.\\
 \\
-In both the XML and JSON formats the different levels of factors in the labels are separated by !!.  To form a valid GET request we take the header from the JSON file (or the $id$ from the XML file) and that will be the parameter we use for ($[$VARIABLES$]$).  The concept-label ID {\tt B27001\_056E} will request the ``75 and older female with health insurance" label from the ``health insurance coverage status by sex by age" concept.  A valid HTTP GET request for this is \url{http://api.census.gov/data/[YEAR]/[DATASET]?key=[KEY]&get=B27001_056E&for=[GEOGRAPHY]}.
+In both the XML and JSON formats the different levels of factors in the labels are separated by !!.  To form a valid GET request we take the header from the JSON file (or the $id$ from the XML file) and that will be the parameter we use for ($[$VARIABLES$]$).  The concept-label ID {\tt B27001\_056E} will request the ``75 and older female with health insurance" label from the ``health insurance coverage status by sex by age" concept.  A valid HTTP GET request for this is \url{http://api.census.gov/data/[YEAR]/[DATASET]?key=[KEY]&get=B27001_056E, B27001_057E&for=[GEOGRAPHY]}.
 
 <<dataexample, echo=FALSE, cache=TRUE, results='asis', warning=FALSE>>=
 library(rjson)
@@ -301,12 +309,14 @@ df = ldply(js)
 names(df) = df[1,]
 df = df[-1,]
 
-print(xtable(head(df), label="tab:df", caption="Health insurance status of women 75 years and older in California by county from 2012 ACS 5-year data"))
+print(xtable(head(df), label="tab:df", caption="Number of  women 75 years and older with (056E) and without (057E) halth insurance in California by county from 2012 ACS 5-year data"))
 @
 
-Table \ref{tab:df} is information on health insurance for women 75 and older in California from the 2012 ACS 5-year data listed by county.  The HTTP GET request for this is \url{http://api.census.gov/data/2012/acs5?key=[KEY]&get=B27001_056E,B27001_057E,NAME&for=county:*&in=state:06}.  Labels 056E and 057E are labels for women 75 and older with health insurance and women 75 and older without health insurance respectively.  Table \ref{tab:df} indicates that there are 45,052 women over 75 in Alameda county that have health insurance and there are 302 women over 75 in Alameda county without health insurance.\\
+%Table \ref{tab:df} is information on health insurance for women 75 and older in California from the 2012 ACS 5-year data listed by county.  The HTTP GET request for this is \url{http://api.census.gov/data/2012/acs5?key=[KEY]&get=B27001_056E,B27001_057E,NAME&for=county:*&in=state:06}.  Labels 056E and 057E are labels for women 75 and older with health insurance and women 75 and older without health insurance respectively.  
+Table \ref{tab:df} indicates that there are 45,052 women over 75 in Alameda county that have health insurance and there are 302 women over 75 in Alameda county without health insurance.\\
 \\
-The list of variables, $variables.json$ and $variables.xml$ not only contain a list of variables as described above but also include margin of error.  Estimates from the ACS are based on random sampling thus each of the estimates has a standard error.  The Census Bureau uses a 90$\%$ confidence level for their margin of error.  To find the associated margin of error for our variable we replace the last letter of label with an ``M" instead of an ``E".  For example, {\tt B27001\_056M} and {\tt B27001\_057M} are the associated standard errors for the previous example.  Table \ref{margin:df} gives a list of standard errors for the data in table \ref{tab:df}; standard errors have the exact same formatting as any other variable from the ACS.\\
+%The list of variables, 
+\hh{The files} {\tt variables.json} and {\tt variables.xml} not only contain a list of variables as described above but also include margin of error.  Estimates from the ACS are based on random sampling thus each of the estimates has a standard error.  The Census Bureau uses a 90$\%$ confidence level for their margin of error.  To find the associated margin of error for our variable we replace the last letter of label with an ``M" instead of an ``E".  For example, {\tt B27001\_056M} and {\tt B27001\_057M} are the associated standard errors for the previous example.  Table \ref{margin:df} gives a list of standard errors for the data in table \ref{tab:df}; standard errors have the exact same formatting as any other variable from the ACS.\\
 
 <<marginexample, echo=FALSE, cache=TRUE, results='asis', warning=FALSE>>=
 library(xtable)
@@ -320,10 +330,10 @@ df = df[-1,]
 print(xtable(head(df), label="margin:df", caption="Margin of error for health insurance status of women 75 years and older in California by county from 2012 ACS 5-year data"))
 @
 
-Using the above table, $45052 \pm 356$ is a 90$\%$ confidence interval for the number of women in Alameda County 75 and over with health insurance.
+\hh{Based on tables \ref{tab:df} and \ref{margin:df}}, $45052 \pm 356$ is a 90$\%$ confidence interval for the number of women in Alameda County 75 and over with health insurance.
 
 \section{Limitations of the API}
-The paper by \citet{stangl:2013} talks about using the ACS as a dataset for classroom exercises (at the undergraduate level) with an emphasis on how data collected from these surveys is used to make important policy decisions.  The paper contains a number of classroom exercises that ask the reader to calculate  basic proportions about various demographic data such as health insurance coverage, marriage status and income.  The particular dataset used by \citet{stangl:2013} is a 1000 observation random subset of the 2010 ACS public use microdata sample which constitutes a 0.005\% subsample of the 2010 ACS, or about a 0.0003\% representation of the US population. It would be advantageous by far to get corresponding answers based on the whole of the 2010 ACS. \hh{XXX I will try to find an educational reference that realistic examples in the classroom are better for the learning outcome.}  We will attempt to use the Census Bureau online API to examine the same demographic variables.\\
+The paper by \citet{stangl:2013} discusses the use of the American Community Survey as a dataset for classroom exercises (at the undergraduate level) with an emphasis on how data collected from these surveys is used to make important policy decisions.  The paper contains a number of classroom exercises that ask the reader to calculate  basic proportions about various demographic data such as health insurance coverage, marriage status and income.  The particular dataset used by \citet{stangl:2013} is a 1000 observation random subset of the 2010 ACS public use microdata sample which constitutes a 0.005\% subsample of the 2010 ACS, or about a 0.0003\% representation of the US population. It would be advantageous by far to get corresponding answers based on the whole of the 2010 ACS. \hh{XXX I will try to find an educational reference that realistic examples in the classroom are better for the learning outcome.}  We will attempt to use the Census Bureau online API to examine the same demographic variables.\\
 \\
 Using the Census Bureau's online API for these exercises presents us with three main problems:
 \begin{enumerate}
@@ -357,7 +367,8 @@ print(tab1)
 @
 By contrast the online API does not provide individual specific data.  When we perform a HTTP GET request we must specify what geographic level of detail we want.  The geographic level of detail does not go below the county subdivision or census tract level.  Instead of individual specific data we have data that has been aggregated for an entire geographic region.  This is likely due to privacy reasons; if we have individual specific data for a dozen demographic variables along with geographic information it might be possible to reveal this individual's identity.  \\
 \\
-In table \ref{fig:example} we specify state level summaries for health insurance coverage status for various age groups by gender (from the census API this is table B27001).  Each variable is in the form of a table and as previously mentioned we refer to this as a $concept$ and each column in table \ref{fig:example} is referred a $label$.  The first label of each concept is an overall total; the total number of people in the specified geographic region that answered questions relating to the requested concept.   Subsequent labels are subsets of this overall total.  We've conveniently renamed column headers in table \ref{fig:example}; the naming convention from data provided by the API is to enumerate each label with the table name: {\tt B27001\_001},  { \tt B27001\_002} etc.\\
+\hh{How do you actually get the data from the survey? - Mention the acs package XXX. Does that package allow a general access to the API or only to the acs data? }
+In table \ref{fig:example} we specify state level summaries for health insurance coverage status for various age groups by gender (from the census API this is table B27001).  Each variable is in the form of a table and as previously mentioned we refer to this as a {\emph concept} and each column in table \ref{fig:example} is referred a {\emph label}.  The first label of each concept is an overall total; the total number of people in the specified geographic region that answered questions relating to the requested concept.   Subsequent labels are subsets of this overall total.  We have conveniently renamed column headers in table \ref{fig:example}; the naming convention from data provided by the API is to enumerate each label with the table name: {\tt B27001\_001},  { \tt B27001\_002} etc.\\
 \\
 The way this data is organized is not in a tidy format, see \cite{hadley:2014}.  Instead it appears that the columns contain additional categorical information: gender, age and insurance.  In table \ref{fig:tidy} we have tidied up the data so that each row is an observation and each column is a variable.  Originally table B27001 contains a number of \emph{total} columns: overall total, total number of males, total number of females, and within each gender a total number of people within an age group.  In reshaping this data, we felt that these total columns were redundant once the data is in a tidy form. \\
 
